--- a/GeoLocation/GeoLocation/MainPage.xaml
+++ b/GeoLocation/GeoLocation/MainPage.xaml
@@ -7,6 +7,7 @@
         <Label x:Name="Cooridates" Text="Cooridates" />
         <Label x:Name="Direction" Text="Direction" />
         <Label x:Name="Speed" Text="Speed" />
+        <Label x:Name="DistanceToLA" Text="Distance to Los Angeles" />
         <Button x:Name="GetLocation" Text="GetLocation" Clicked="GetLocation_Clicked" />
     </StackLayout>
 
